# main

./: .clang-format  .gitignore  CMakeLists.txt  license.txt  makefile  solution.cmd
res/: config.h.in  resource.h  resource.rc
src/: common.h  main.cpp
